--- a/RelayKit.xcodeproj/xcshareddata/xcschemes/iOS Framework Unit Tests.xcscheme
+++ b/RelayKit.xcodeproj/xcshareddata/xcschemes/iOS Framework Unit Tests.xcscheme
@@ -14,10 +14,24 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2A1499231F6D436A00F1269F"
-               BuildableName = "RelayKit.framework"
-               BlueprintName = "iOS Framework"
-               ReferencedContainer = "container:RelayKit.xcodeproj">
+               BlueprintIdentifier = "DD7C8BF89FE8053D0A2A2D88BB49CF07"
+               BuildableName = "Nimble.framework"
+               BlueprintName = "Nimble"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8B7E6DC7BE08203C670DAC33BB5EB8F2"
+               BuildableName = "Quick.framework"
+               BlueprintName = "Quick"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -27,8 +41,7 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       language = ""
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -44,10 +57,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2A1499231F6D436A00F1269F"
-            BuildableName = "RelayKit.framework"
-            BlueprintName = "iOS Framework"
-            ReferencedContainer = "container:RelayKit.xcodeproj">
+            BlueprintIdentifier = "DD7C8BF89FE8053D0A2A2D88BB49CF07"
+            BuildableName = "Nimble.framework"
+            BlueprintName = "Nimble"
+            ReferencedContainer = "container:Pods/Pods.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -67,10 +80,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2A1499231F6D436A00F1269F"
-            BuildableName = "RelayKit.framework"
-            BlueprintName = "iOS Framework"
-            ReferencedContainer = "container:RelayKit.xcodeproj">
+            BlueprintIdentifier = "DD7C8BF89FE8053D0A2A2D88BB49CF07"
+            BuildableName = "Nimble.framework"
+            BlueprintName = "Nimble"
+            ReferencedContainer = "container:Pods/Pods.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -85,10 +98,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2A1499231F6D436A00F1269F"
-            BuildableName = "RelayKit.framework"
-            BlueprintName = "iOS Framework"
-            ReferencedContainer = "container:RelayKit.xcodeproj">
+            BlueprintIdentifier = "DD7C8BF89FE8053D0A2A2D88BB49CF07"
+            BuildableName = "Nimble.framework"
+            BlueprintName = "Nimble"
+            ReferencedContainer = "container:Pods/Pods.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
