--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ osx_image: xcode9
 
 language: swift
 xcode_workspace: RelayKit.xcworkspace # path to your xcodeproj folder
-xcode_scheme: iOS Framework Unit Tests
+xcode_scheme: RelayKit - iOS
