--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,15 @@
 os: osx
 language: objective-c
-matrix:
-  include:
-    - osx_image: xcode9
-      env: PLAT=iOS SWFT=4.0
-    - osx_image: xcode9
-      env: PLAT=watchOS SWFT=4.0
+osx_image: xcode9
+
 before_install:
-  - case $PLAT in
-    iOS)
-      NAME="iPhone SE";;
-    watchOS)
-      NAME="Apple Watch - 38mm";;
-    esac;
-    if [ -n "$NAME" ]; then
-      export UUID=$(instruments -s | ruby -e "ARGF.each_line{ |ln| ln =~ /$NAME .* \[(.*)\]/; if \$1; puts(\$1); exit; end }");
-      export DESTINATION="id=$UUID";
-    fi
+  - gem install xcpretty -N
 script:
-  - set -o pipefail;
-    case $PLAT in
-    iOS)
-      open -b com.apple.iphonesimulator --args -CurrentDeviceUDID "$UUID";
-      xcodebuild -scheme "RelayKit - iOS" -quiet -destination "$DESTINATION" -enableCodeCoverage YES build clean SWIFT_VERSION=$SWFT;
-      xcodebuild -scheme "RelayKit - iOS" -quiet -destination "$DESTINATION" test;;
-    watchOS)
-      xcodebuild -scheme "RelayKit - iOS" -quiet -destination "$DESTINATION" -quiet clean build SWIFT_VERSION=$SWFT;;
-    esac
+  - set -o pipefail
+  - xcodebuild -version
+  - xcodebuild -showsdks
+  - xcodebuild test -workspace RelayKit.xcworkspace -scheme "iOS Framework" -sdk iphonesimulator11.0 -enableCodeCoverage YES -destination "platform=iOS Simulator,name=iPhone 7" ONLY_ACTIVE_ARCH=NO | xcpretty -c
+  - xcodebuild build -workspace RelayKit.xcworkspace -scheme "watchOS Framework" -sdk watchsimulator
 after_success:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
       bash <(curl -s https://codecov.io/bash);
